--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 
 <div>
   <p><%= Date.today.strftime("%A, %d %B %Y") %></p>
-  <img src="<%= @icon_url %>">
-  <p><%= @data["weather"].first["main"] %></p>
+  <img src="<%= @data.icon_url %>">
+  <p><%= @data.main %></p>
   <p><strong>Description:</strong></p>
-  <p><%= @data["weather"].first["description"] %></p>
+  <p><%= @data.description %></p>
   <p><strong>Temperature:</strong></p>
-  <p><%= @data["main"]["temp"] %> Celcius</p>
+  <p><%= @data.temp %> Celcius</p>
 </div>
